# IOS-upgrade

./: .gitignore  README.md  boot.actions.txt  cisco_ios.table.txt  conda.yml  ideas.md  ios.actions.txt  setup.cfg  upgrade.actions.txt
etc/IOS-upgrade/: IOS-upgrade.fetch_and_reload.actions.txt  IOS-upgrade.pre.actions.txt  IOS-upgrade.reboot.actions.txt  IOS-upgrade.reload.actions.txt  IOS-upgrade.verify.actions.txt  IOS.actions.txt  IOS.platform.actions.txt  IOS_table.actions.txt  check.actions.txt  cisco_ios.table.sample.txt  cisco_ios.table.txt  fetch_and_reload.actions.txt  pre.actions.txt  reboot.actions.txt  reload.actions.txt
etc/ios-upgrade/: IOS.actions.txt  IOS.check_table.actions.txt  IOS.platform.actions.txt  IOS.table.actions.txt  check.actions.txt  cisco_ios.table.sample.txt  compare.actions.txt  fileserver.actions.txt  fileserver_speed.actions.txt  prepare.actions.txt  prepare_and_reload.actions.txt  reboot.actions.txt  reload.actions.txt  report.actions.txt  report_speed.actions.txt  sort.actions.txt  speed.actions.txt  stat.actions.txt  time.actions.txt  transfer.actions.txt  verify.actions.txt  verify_test.actions.txt
lib/ios_upgrade/: __init__.py  helper.py
