[metadata]
name = ios-upgrade
version = 1.0
author = Ton Hospel
author_email = IOS-upgrade@ton.iguana.be
description = device-apply action files for Cisco IOS upgrade
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sede-it-itso.visualstudio.com/Connectivity%%20Automation%%20POC/_git/IOS-upgrade
classifiers =
    Topic :: System :: Networking
    Intended Audience :: Telecommunications Industry
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Operating System :: POSIX
[options]
python_requires = >=3.8
py_modules =
scripts =
    bin/IOS-upgrade.pre
    bin/IOS-upgrade.reload
    bin/IOS-upgrade.check
    bin/IOS-upgrade.fetch_and_reload
[options.data_files]
etc/IOS-upgrade=
    # etc/IOS-upgrade/cisco-ios.table.txt
    etc/IOS-upgrade/pre.actions.txt
    etc/IOS-upgrade/reload.actions.txt
    etc/IOS-upgrade/check.actions.txt
    etc/IOS-upgrade/fetch_and_reload.actions.txt
    etc/IOS-upgrade/IOS.actions.txt
    etc/IOS-upgrade/reboot.actions.txt
    etc/IOS-upgrade/verify.actions.txt
[options.extras_require]
    dev=
        sphinx
        # jupyter
        # ipython

[mypy]
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores  = True
# disallow_any_unimported = True
# disallow_any_expr = True
disallow_any_decorated = True
# disallow_any_explicit = True
# disallow_any_generics = True
disallow_subclassing_any = True
# disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
# strict = True

[make_python_rpm]
target = /opt/Shell/tooling/IOS-upgrade
vendor = Shell Technical Engineering <SITI-ITSO-ETSOM-CON-TE-Tooling@shell.com>
git = main
version_min = 1.0.13
executable = /opt/Shell/tooling/device-apply/bin/python3
